--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,14 @@
 
 buildscript {
     repositories {
+		google()
+		maven {
+            url "https://plugins.gradle.org/m2/"
+        }
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0-beta4'
+        classpath 'com.android.tools.build:gradle:3.4.2'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -14,6 +18,10 @@ buildscript {
 
 allprojects {
     repositories {
+		google()
+        maven {
+            url "https://maven.google.com"
+        }
         jcenter()
     }
 }
